# Phoenix2D

./: Fuzzy.json  Makefile.in  Potential.json  agent  configure  data.txt  main.cpp  suatest.sh
ai/: Makefile.in  libPhoenixAI-1.0.la
ai/.libs/: libPhoenixAI-1.0.la  libPhoenixAI-1.0.lai
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
base/: Makefile.in  libPhoenixBase-1.0.la
base/.libs/: libPhoenixBase-1.0.la  libPhoenixBase-1.0.lai
base/src/: Parser.cpp  World.cpp
tests/: Makefile.am  Makefile.in  libPhoenixTests-1.0.la
tests/.libs/: libPhoenixTests-1.0.la  libPhoenixTests-1.0.lai
tests/include/: prueba1.hpp  prueba2.hpp  prueba3.hpp  tests.hpp  theFuzzy.hpp
tests/src/: prueba1.cpp  prueba2.cpp  prueba3.cpp  theFuzzy.cpp
trainer/: prueba1.phx  prueba2.phx  prueba3.phx
utils/include/: GAlgorithm.hpp  functions.hpp
utils/src/: FVariable.cpp  GAlgorithm.cpp
