AM_CPPFLAGS = -Iinclude -I$(top_builddir)/base/include -I$(top_builddir)/utils/include
lib_LTLIBRARIES = libPhoenixTests-1.0.la
libPhoenixTests_1_0_la_SOURCES = \
	src/dribble.cpp \
	src/localization.cpp \
	src/dribble.cpp \
	src/prueba1.cpp \
	src/prueba2.cpp \
	src/prueba3.cpp \
	src/worldtest.cpp