AM_CPPFLAGS = -Iinclude -I$(top_builddir)/base/include -I$(top_builddir)/utils/include
lib_LTLIBRARIES = libPhoenixTests-2.1.la
libPhoenixTests_2_1_la_SOURCES = \
	src/dribble.cpp \
	src/localization.cpp \
	src/dribble.cpp \
	src/prueba1.cpp \
	src/prueba2.cpp \
	src/prueba3.cpp \
	src/theFuzzy.cpp \
	src/worldtest.cpp